--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,13 +28,14 @@
 
             <Button
                 android:id="@+id/buttonAC"
+                style="buttonbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#2C2F33"
-                android:text="AC"
+                android:text="@string/ACSymbol"
                 android:textSize="34sp" />
 
             <Button
@@ -45,7 +46,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#2C2F33"
-                android:text="+-"
+                android:text="@string/PosNegSymbol"
                 android:textSize="48sp" />
 
             <Button
@@ -56,7 +57,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#2C2F33"
-                android:text="%"
+                android:text="@string/ModulusSymbol"
                 android:textSize="48sp" />
 
         </TableRow>
@@ -76,7 +77,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="1"
+                android:text="@string/Num1"
                 android:textSize="48sp" />
 
             <Button
@@ -87,7 +88,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="2"
+                android:text="@string/Num2"
                 android:textSize="48sp" />
 
             <Button
@@ -98,7 +99,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="3"
+                android:text="@string/Num3"
                 android:textSize="48sp" />
 
         </TableRow>
@@ -117,7 +118,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="4"
+                android:text="@string/Num4"
                 android:textSize="48sp" />
 
             <Button
@@ -128,7 +129,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="5"
+                android:text="@string/Num5"
                 android:textSize="48sp" />
 
             <Button
@@ -139,7 +140,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="6"
+                android:text="@string/Num6"
                 android:textSize="48sp" />
 
         </TableRow>
@@ -158,7 +159,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="7"
+                android:text="@string/Num7"
                 android:textSize="48sp" />
 
             <Button
@@ -169,7 +170,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="8"
+                android:text="@string/Num8"
                 android:textSize="48sp" />
 
             <Button
@@ -180,7 +181,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="9"
+                android:text="@string/Num9"
                 android:textSize="48sp" />
 
         </TableRow>
@@ -199,7 +200,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="0"
+                android:text="@string/Num0"
                 android:textSize="48sp" />
 
             <Button
@@ -210,7 +211,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7289DA"
-                android:text="."
+                android:text="@string/Period"
                 android:textSize="48sp" />
 
         </TableRow>
@@ -237,7 +238,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:backgroundTint="#2C2F33"
-            android:text="+"
+            android:text="@string/PlusSymbol"
             android:textSize="48sp" />
 
         <Button
@@ -248,7 +249,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:backgroundTint="#2C2F33"
-            android:text="-"
+            android:text="@string/MinusSymbol"
             android:textSize="48sp" />
 
         <Button
@@ -259,7 +260,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:backgroundTint="#2C2F33"
-            android:text="/"
+            android:text="@string/DivideSymbol"
             android:textSize="48sp" />
 
         <Button
@@ -270,7 +271,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:backgroundTint="#2C2F33"
-            android:text="*"
+            android:text="@string/MultiplySymbol"
             android:textSize="48sp" />
 
         <Button
@@ -281,7 +282,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:backgroundTint="#2C2F33"
-            android:text="="
+            android:text="@string/EqualsSymbol"
             android:textSize="48sp" />
     </LinearLayout>
 
